--- a/rails_angular_with_rails_assets/Gemfile
+++ b/rails_angular_with_rails_assets/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
-gem 'rails', '4.0.13'
-gem 'sqlite3'
+gem 'rails', '4.2.1'
+gem 'pg'
 gem 'sass-rails', '~> 4.0.2'
 gem 'uglifier', '>= 1.3.0'
 gem 'jquery-rails'
