--- a/rails_angular_with_rails_assets/Gemfile
+++ b/rails_angular_with_rails_assets/Gemfile
@@ -1,10 +1,12 @@
 source 'https://rubygems.org'
 
-gem 'rails', '4.2.1'
+gem 'rails', '4.2.0'
 gem 'pg'
 gem 'sass-rails', '~> 4.0.2'
 gem 'uglifier', '>= 1.3.0'
 gem 'jquery-rails'
+
+gem 'devise', branch: 'lm-rails-4-2'
 
 group :doc do
   gem 'sdoc', require: false
