--- a/rails_angular_with_rails_assets/Gemfile
+++ b/rails_angular_with_rails_assets/Gemfile
@@ -1,12 +1,13 @@
 source 'https://rubygems.org'
 
 gem 'rails', '4.2.0'
-gem 'pg'
+gem 'pg', '~> 0.18.1'
 gem 'sass-rails', '~> 4.0.2'
 gem 'uglifier', '>= 1.3.0'
 gem 'jquery-rails'
 
 gem 'devise', branch: 'lm-rails-4-2'
+gem 'haml', '~> 4.0.6'
 
 group :doc do
   gem 'sdoc', require: false
